# SHRINKIT-Compression-Studio

./: CMakeLists.txt  README.md  arith.cpp  arith.h  brotli.cpp  brotli.h  codec.cpp  codec.h  flif_codec.cpp  flif_codec.h  huffman.cpp  huffman.h  image_codec.cpp  image_codec.h  imgui.ini  j2k_codec.cpp  j2k_codec.h  jpeg_codec.cpp  jpeg_codec.h  lzw.cpp  lzw.h  main.cpp  png_codec.cpp  png_codec.h  quadtree.cpp  quadtree.h  rle.cpp  rle.h  run_mac.sh  run_windows.ps1  setup_mac.sh  setup_windows.ps1  webp_codec.cpp  webp_codec.h
